@@ -18,41 +18,26 @@ package com.castlemock.web.mock.soap.controller.mock;
 
 import com.castlemock.model.core.ServiceProcessor;
 import com.castlemock.model.core.http.HttpHeader;
-import com.castlemock.model.core.http.HttpMethod;
 import com.castlemock.model.core.utility.IdUtility;
-import com.castlemock.model.core.utility.XPathUtility;
-import com.castlemock.model.core.utility.parser.ExternalInputBuilder;
-import com.castlemock.model.core.utility.parser.TextParser;
-import com.castlemock.model.core.utility.parser.expression.argument.ExpressionArgument;
 import com.castlemock.model.mock.soap.domain.SoapEvent;
-import com.castlemock.model.mock.soap.domain.SoapMockResponse;
-import com.castlemock.model.mock.soap.domain.SoapMockResponseStatus;
 import com.castlemock.model.mock.soap.domain.SoapOperation;
-import com.castlemock.model.mock.soap.domain.SoapOperationIdentifier;
-import com.castlemock.model.mock.soap.domain.SoapOperationStatus;
 import com.castlemock.model.mock.soap.domain.SoapRequest;
 import com.castlemock.model.mock.soap.domain.SoapResourceType;
 import com.castlemock.model.mock.soap.domain.SoapResponse;
-import com.castlemock.model.mock.soap.domain.SoapResponseStrategy;
-import com.castlemock.model.mock.soap.domain.SoapVersion;
-import com.castlemock.model.mock.soap.domain.SoapXPathExpression;
 import com.castlemock.service.mock.soap.event.input.CreateSoapEventInput;
-import com.castlemock.service.mock.soap.project.input.CreateSoapMockResponseInput;
 import com.castlemock.service.mock.soap.project.input.IdentifySoapOperationInput;
 import com.castlemock.service.mock.soap.project.input.LoadSoapResourceInput;
 import com.castlemock.service.mock.soap.project.input.ReadSoapProjectInput;
-import com.castlemock.service.mock.soap.project.input.UpdateCurrentMockResponseSequenceIndexInput;
-import com.castlemock.service.mock.soap.project.input.UpdateSoapOperationsStatusInput;
 import com.castlemock.service.mock.soap.project.output.IdentifySoapOperationOutput;
 import com.castlemock.service.mock.soap.project.output.LoadSoapResourceOutput;
 import com.castlemock.service.mock.soap.project.output.ReadSoapProjectOutput;
-import com.castlemock.service.mock.soap.utility.SoapUtility;
 import com.castlemock.web.core.controller.AbstractController;
-import com.castlemock.web.core.utility.HttpMessageSupport;
+import com.castlemock.web.mock.soap.converter.HttpServletRequestConverter;
+import com.castlemock.web.mock.soap.factory.SoapStrategyFactory;
 import com.castlemock.web.mock.soap.model.SoapException;
-import com.castlemock.web.mock.soap.utility.MtomUtility;
-import com.castlemock.web.mock.soap.utility.compare.SoapMockResponseNameComparator;
-import com.castlemock.web.mock.soap.utility.config.AddressLocationConfigurer;
+import com.castlemock.web.mock.soap.stategy.SoapStrategy;
+import com.castlemock.web.mock.soap.stategy.SoapStrategyResult;
+import com.castlemock.web.mock.soap.utility.SoapUtility;
 import com.google.common.base.Preconditions;
 import jakarta.servlet.ServletContext;
 import jakarta.servlet.http.HttpServletRequest;
@@ -62,20 +47,12 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.multipart.MultipartHttpServletRequest;
 
-import java.text.DateFormat;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.Enumeration;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Random;
-import java.util.Set;
 
 /**
  * The AbstractSoapServiceController provides functionality that are shared for all the SOAP controllers
@@ -85,29 +62,18 @@ import java.util.Set;
  */
 @Controller
 public abstract class AbstractSoapServiceController extends AbstractController {
-
-    private static final String RECORDED_RESPONSE_NAME = "Recorded response";
-    private static final DateFormat DATE_FORMAT = new SimpleDateFormat("yyyy/MM/dd HH:mm:ss");
     private static final String CONTENT_ENCODING = "Content-Encoding";
-    private static final Random RANDOM = new Random();
-    private static final String SOAP = "soap";
-    private static final int ERROR_CODE = 500;
     private static final String DEFAULT_CHAR_SET = "charset=\"utf-8\"";
     private static final Logger LOGGER = LoggerFactory.getLogger(AbstractSoapServiceController.class);
-
-    private static final SoapMockResponseNameComparator MOCK_RESPONSE_NAME_COMPARATOR =
-            new SoapMockResponseNameComparator();
-
-    private final ServletContext servletContext;
-
-    private final SoapClient soapHttpClient;
+    private final String contextPath;
+    private final SoapStrategyFactory strategyFactory;
 
     protected AbstractSoapServiceController(final ServiceProcessor serviceProcessor,
                                             final ServletContext servletContext,
-                                            SoapClient soapClient) {
+                                            final SoapStrategyFactory strategyFactory) {
         super(serviceProcessor);
-        this.servletContext = Objects.requireNonNull(servletContext);
-        this.soapHttpClient = soapClient;
+        this.contextPath = Objects.requireNonNull(servletContext.getContextPath(), "contextPath");
+        this.strategyFactory = Objects.requireNonNull(strategyFactory, "strategyFactory");
     }
 
     /**
@@ -125,7 +91,7 @@ public abstract class AbstractSoapServiceController extends AbstractController {
         try {
             Preconditions.checkNotNull(projectId, "THe project id cannot be null");
             Preconditions.checkNotNull(httpServletRequest, "The HTTP Servlet Request cannot be null");
-            final SoapRequest request = prepareRequest(projectId, httpServletRequest);
+            final SoapRequest request = HttpServletRequestConverter.toSoapRequest(httpServletRequest, projectId, contextPath);
             final IdentifySoapOperationOutput output = serviceProcessor.process(IdentifySoapOperationInput.builder()
                     .projectId(projectId)
                     .operationIdentifier(request.getOperationIdentifier())
@@ -143,7 +109,7 @@ public abstract class AbstractSoapServiceController extends AbstractController {
 
     protected ResponseEntity<?> processGet(final String projectId, final HttpServletRequest httpServletRequest) {
         try {
-            Preconditions.checkNotNull(projectId, "THe project id cannot be null");
+            Preconditions.checkNotNull(projectId, "The project id cannot be null");
             Preconditions.checkNotNull(httpServletRequest, "The HTTP Servlet Request cannot be null");
             Enumeration<String> parameterNames = httpServletRequest.getParameterNames();
             while (parameterNames.hasMoreElements()) {
@@ -151,7 +117,7 @@ public abstract class AbstractSoapServiceController extends AbstractController {
                 if (parameterName.equalsIgnoreCase("wsdl")) {
 
                     return getWsdl(projectId)
-                            .map(wsdl -> AddressLocationConfigurer.configureAddressLocation(wsdl, httpServletRequest.getRequestURL().toString()))
+                            .map(wsdl -> SoapUtility.getWsdlAddress(wsdl, httpServletRequest.getRequestURL().toString()))
                             .map(wsdl -> {
                                 final HttpHeaders responseHeaders = new HttpHeaders();
                                 responseHeaders.put(CONTENT_TYPE, List.of("text/xml; " + DEFAULT_CHAR_SET));
@@ -188,49 +154,6 @@ public abstract class AbstractSoapServiceController extends AbstractController {
     }
 
     /**
-     * The method prepares an request
-     *
-     * @param projectId          The id of the project that the incoming request belongs to
-     * @param httpServletRequest The incoming request
-     * @return A new created project
-     */
-    private SoapRequest prepareRequest(final String projectId, final HttpServletRequest httpServletRequest) {
-        final String body = HttpMessageSupport.getBody(httpServletRequest);
-
-        final SoapOperationIdentifier identifier;
-        final String envelope;
-        if (httpServletRequest instanceof MultipartHttpServletRequest) {
-            // Check if the request is a Multipart request. If so, interpret  the incoming request
-            // as a MTOM request and extract the main body (Exclude the attachment).
-            // MTOM request mixes both the attachments and the body in the HTTP request body.
-            envelope = MtomUtility.extractMtomBody(body, httpServletRequest.getContentType());
-
-            // Use the main body to identify
-            identifier = SoapUtility.extractSoapRequestName(envelope);
-        } else {
-            // The incoming request is a regular SOAP request. Parse the body as it is.
-            envelope = body;
-            identifier = SoapUtility.extractSoapRequestName(body);
-        }
-
-        final String serviceUri = httpServletRequest.getRequestURI().replace(servletContext.getContextPath() +
-                SLASH + MOCK + SLASH + SOAP + SLASH + PROJECT + SLASH + projectId + SLASH, EMPTY);
-        final Set<HttpHeader> httpHeaders = HttpMessageSupport.extractHttpHeaders(httpServletRequest);
-
-        final SoapVersion type = SoapVersion.convert(httpServletRequest.getContentType());
-        return SoapRequest.builder()
-                .soapVersion(type)
-                .httpHeaders(httpHeaders)
-                .uri(serviceUri)
-                .httpMethod(HttpMethod.valueOf(httpServletRequest.getMethod()))
-                .body(body)
-                .envelope(envelope)
-                .operationIdentifier(identifier)
-                .contentType(httpServletRequest.getContentType())
-                .build();
-    }
-
-    /**
      * The process method is responsible for processing the incoming request and
      * finding the appropriate response. The method is also responsible for creating
      * events and storing them.
@@ -253,40 +176,17 @@ public abstract class AbstractSoapServiceController extends AbstractController {
         final Date startDate = new Date();
         SoapResponse response = null;
         try {
-            if (SoapOperationStatus.DISABLED.equals(soapOperation.getStatus())) {
-                throw new SoapException("The requested soap operation, " + soapOperation.getName() + ", is disabled");
-            } else if (SoapOperationStatus.FORWARDED.equals(soapOperation.getStatus()) ||
-                    SoapOperationStatus.RECORDING.equals(soapOperation.getStatus()) ||
-                    SoapOperationStatus.RECORD_ONCE.equals(soapOperation.getStatus())) {
-                response = forwardRequest(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-            } else if (SoapOperationStatus.ECHO.equals(soapOperation.getStatus())) {
-                response = echoResponse(request);
-            } else { // Status.MOCKED
-                response = mockResponse(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-            }
+            final SoapStrategy soapStrategy = this.strategyFactory.getStrategy(soapOperation);
+            final SoapStrategyResult result =
+                    soapStrategy.process(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
+            response = result.getResponse()
+                    .orElseThrow(() -> new IllegalStateException("Unable to process request: " + request));
+            result.getPostServiceRequests()
+                    .forEach(this.serviceProcessor::processAsync);
 
-            final HttpHeaders responseHeaders = new HttpHeaders();
-            responseHeaders.put(CONTENT_TYPE,
-                    List.of(request.getSoapVersion().getContextType() + "; " + DEFAULT_CHAR_SET));
-            for (HttpHeader httpHeader : response.getHttpHeaders()) {
-                responseHeaders.put(httpHeader.getName(), List.of(httpHeader.getValue()));
-            }
-
-            response.getHttpHeaders()
-                    .stream()
-                    .filter(httpHeader -> !httpHeader.getName().equalsIgnoreCase(CONTENT_ENCODING))
-                    .forEach(httpHeader -> responseHeaders.put(httpHeader.getName(), List.of(httpHeader.getValue())));
-
-            if (soapOperation.getSimulateNetworkDelay().orElse(false) &&
-                    soapOperation.getNetworkDelay().orElse(0L) >= 0L) {
-                try {
-                    Thread.sleep(soapOperation.getNetworkDelay().get());
-                } catch (InterruptedException e) {
-                    LOGGER.error("Unable to simulate network delay", e);
-                }
-            }
-
-            return new ResponseEntity<>(response.getBody(), responseHeaders,
+            final HttpHeaders headers = getHttpHeaders(request, response);
+            simulateNetworkDelay(soapOperation);
+            return new ResponseEntity<>(response.getBody(), headers,
                     HttpStatus.valueOf(response.getHttpStatusCode()));
         } finally {
             final SoapEvent event = SoapEvent.builder()
@@ -300,204 +200,36 @@ public abstract class AbstractSoapServiceController extends AbstractController {
                     .portId(soapPortId)
                     .operationId(soapOperation.getId())
                     .build();
-            serviceProcessor.processAsync(CreateSoapEventInput.builder()
+            this.serviceProcessor.processAsync(CreateSoapEventInput.builder()
                     .soapEvent(event)
                     .build());
         }
     }
 
-    /**
-     * The method will echo the incoming {@link SoapRequest} and create a {@link SoapResponse}
-     * with the same body, content type and headers.
-     *
-     * @param request The incoming {@link SoapRequest} that will be echoed back to the
-     *                service consumer.
-     * @return A {@link SoapResponse} based on the provided {@link SoapRequest}.
-     * @since 1.14
-     */
-    private SoapResponse echoResponse(final SoapRequest request) {
-        final List<HttpHeader> headers = List.of(HttpHeader.builder()
-                .name(CONTENT_TYPE)
-                .value(request.getContentType())
-                .build());
+    private HttpHeaders getHttpHeaders(final SoapRequest request, final SoapResponse response) {
+        final HttpHeaders responseHeaders = new HttpHeaders();
+        responseHeaders.put(CONTENT_TYPE,
+                List.of(request.getSoapVersion().getContextType() + "; " + DEFAULT_CHAR_SET));
+        for (HttpHeader httpHeader : response.getHttpHeaders()) {
+            responseHeaders.put(httpHeader.getName(), List.of(httpHeader.getValue()));
+        }
 
-        return SoapResponse.builder()
-                .body(request.getBody())
-                .contentType(request.getContentType())
-                .httpHeaders(headers)
-                .httpStatusCode(DEFAULT_ECHO_RESPONSE_CODE)
-                .contentEncodings(Collections.emptyList())
-                .build();
+        response.getHttpHeaders()
+                .stream()
+                .filter(httpHeader -> !httpHeader.getName().equalsIgnoreCase(CONTENT_ENCODING))
+                .forEach(httpHeader -> responseHeaders.put(httpHeader.getName(), List.of(httpHeader.getValue())));
+
+        return responseHeaders;
     }
 
-    /**
-     * The method is responsible for retrieving and returning a mocked response for the provided operation
-     *
-     * @param soapOperation The SOAP operation that is being executed. The response is based on
-     *                      the provided SOAP operation.
-     * @return A mocked response based on the provided SOAP operation
-     */
-    private SoapResponse mockResponse(final SoapRequest request,
-                                      final String soapProjectId,
-                                      final String soapPortId,
-                                      final SoapOperation soapOperation,
-                                      final HttpServletRequest httpServletRequest) {
-        final List<SoapMockResponse> mockResponses = new ArrayList<>();
-        for (SoapMockResponse mockResponse : soapOperation.getMockResponses()) {
-            if (mockResponse.getStatus().equals(SoapMockResponseStatus.ENABLED)) {
-                mockResponses.add(mockResponse);
+    private void simulateNetworkDelay(final SoapOperation operation) {
+        if (operation.getSimulateNetworkDelay().orElse(false) &&
+                operation.getNetworkDelay().orElse(0L) >= 0L) {
+            try {
+                Thread.sleep(operation.getNetworkDelay().get());
+            } catch (InterruptedException e) {
+                LOGGER.error("Unable to simulate network delay", e);
             }
-        }
-
-        mockResponses.sort(MOCK_RESPONSE_NAME_COMPARATOR);
-
-        SoapMockResponse mockResponse = null;
-        if (mockResponses.isEmpty()) {
-            if (soapOperation.getAutomaticForward().orElse(false) && soapOperation.getForwardedEndpoint().isPresent()) {
-                return forwardRequest(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-            }
-        } else if (soapOperation.getResponseStrategy().equals(SoapResponseStrategy.RANDOM)) {
-            final int responseIndex = RANDOM.nextInt(mockResponses.size());
-            mockResponse = mockResponses.get(responseIndex);
-        } else if (soapOperation.getResponseStrategy().equals(SoapResponseStrategy.SEQUENCE)) {
-            Integer currentSequenceNumber = soapOperation.getCurrentResponseSequenceIndex();
-            if (currentSequenceNumber >= mockResponses.size()) {
-                currentSequenceNumber = 0;
-            }
-            mockResponse = mockResponses.get(currentSequenceNumber);
-            serviceProcessor.process(UpdateCurrentMockResponseSequenceIndexInput.builder()
-                    .projectId(soapProjectId)
-                    .portId(soapPortId)
-                    .operationId(soapOperation.getId())
-                    .currentResponseSequenceIndex(currentSequenceNumber + 1)
-                    .build());
-        } else if (soapOperation.getResponseStrategy().equals(SoapResponseStrategy.XPATH_INPUT)) {
-            for (SoapMockResponse testedMockResponse : mockResponses) {
-                for (SoapXPathExpression xPathExpression : testedMockResponse.getXpathExpressions()) {
-                    if (XPathUtility.isValidXPathExpr(request.getEnvelope(), xPathExpression.getExpression())) {
-                        mockResponse = testedMockResponse;
-                        break;
-                    }
-                }
-            }
-
-
-            if (mockResponse == null) {
-                LOGGER.info("Unable to match the input XPath to a response");
-                mockResponse = this.getDefaultMockResponse(soapOperation, mockResponses).orElse(null);
-
-                if (mockResponse == null && soapOperation.getAutomaticForward().orElse(false
-                ) && soapOperation.getForwardedEndpoint().isPresent()) {
-                    return forwardRequest(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-                }
-            }
-        }
-
-        if (mockResponse == null) {
-            throw new SoapException("No mocked response created for operation " + soapOperation.getName());
-        }
-
-        String body = mockResponse.getBody();
-        if (mockResponse.getUsingExpressions().orElse(false)) {
-
-            final Map<String, ExpressionArgument<?>> externalInput = new ExternalInputBuilder()
-                    .requestUrl(httpServletRequest.getRequestURL().toString())
-                    .requestBody(request.getBody())
-                    .build();
-
-            body = new TextParser().parse(body, externalInput)
-                    .orElse("");
-        }
-        return SoapResponse.builder()
-                .body(body)
-                .mockResponseName(mockResponse.getName())
-                .httpHeaders(mockResponse.getHttpHeaders())
-                .httpStatusCode(mockResponse.getHttpStatusCode())
-                .contentEncodings(mockResponse.getContentEncodings())
-                .build();
-    }
-
-    private Optional<SoapMockResponse> getDefaultMockResponse(final SoapOperation soapOperation,
-                                                              final List<SoapMockResponse> mockResponses) {
-        final String defaultResponseId = soapOperation.getDefaultMockResponseId()
-                .orElse(null);
-
-        if (defaultResponseId != null && !defaultResponseId.isEmpty()) {
-            LOGGER.info("Use the default response");
-            for (SoapMockResponse tmpMockResponse : mockResponses) {
-                if (defaultResponseId.equals(tmpMockResponse.getId())) {
-                    return Optional.of(tmpMockResponse);
-                }
-            }
-            LOGGER.error("Unable to find the default response");
-        }
-        return Optional.empty();
-    }
-
-    /**
-     * The method provides the functionality to forward request to a forwarded endpoint.
-     *
-     * @param request       The request that will be forwarded
-     * @param soapOperation The SOAP operation that is being executed
-     * @return The response from the system that the request was forwarded to.
-     */
-    private SoapResponse forwardRequest(final SoapRequest request,
-                                        final String soapProjectId,
-                                        final String soapPortId,
-                                        final SoapOperation soapOperation,
-                                        final HttpServletRequest httpServletRequest) {
-        Optional<SoapResponse> optionalSoapResponse = soapHttpClient.getResponse(request, soapOperation);
-
-        if (optionalSoapResponse.isPresent()) {
-            SoapResponse response = optionalSoapResponse.get();
-            if (response.getHttpStatusCode() >= ERROR_CODE) {
-                // Check if the response code is an error code
-                // If so, then we should check if we should mock instead.
-                if (soapOperation.getMockOnFailure().orElse(false)) {
-                    // Instead of using the forwarded
-                    LOGGER.debug("SOAP Operation with the following id has been configured" +
-                            " to mock response upon error: " + soapOperation.getId());
-                    return this.mockResponse(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-                }
-            }
-
-            if (SoapOperationStatus.RECORDING.equals(soapOperation.getStatus()) ||
-                    SoapOperationStatus.RECORD_ONCE.equals(soapOperation.getStatus())) {
-
-                serviceProcessor.processAsync(CreateSoapMockResponseInput.builder()
-                        .projectId(soapProjectId)
-                        .portId(soapPortId)
-                        .operationId(soapOperation.getId())
-                        .body(response.getBody())
-                        .status(SoapMockResponseStatus.ENABLED)
-                        .name(RECORDED_RESPONSE_NAME + SPACE + DATE_FORMAT.format(new Date()))
-                        .httpHeaders(response.getHttpHeaders())
-                        .httpStatusCode(response.getHttpStatusCode())
-                        .usingExpressions(Boolean.FALSE)
-                        .build());
-
-
-                if (SoapOperationStatus.RECORD_ONCE.equals(soapOperation.getStatus())) {
-                    // Change the operation status to mocked if the
-                    // operation has been configured to only record once.
-                    serviceProcessor.process(UpdateSoapOperationsStatusInput.builder()
-                            .projectId(soapProjectId)
-                            .portId(soapPortId)
-                            .operationId(soapOperation.getId())
-                            .operationStatus(SoapOperationStatus.MOCKED)
-                            .build());
-                }
-            }
-
-            return response;
-        } else {
-            if (soapOperation.getMockOnFailure().orElse(false)) {
-                LOGGER.debug("SOAP Operation with the following id has been configured" +
-                        " to mock response upon error: " + soapOperation.getId());
-                return this.mockResponse(request, soapProjectId, soapPortId, soapOperation, httpServletRequest);
-            }
-
-            throw new SoapException("Unable to forward request to configured endpoint");
         }
     }
 
